--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -18,7 +19,6 @@ android {
     }
 
     buildFeatures {
-        viewBinding true
         dataBinding true
     }
 
